welcome.lessons.welcome.bat.bool2.AlarmClock.scala.error
alarmClock:2: error: reassignment to val
  day=(day+6)%7
     ^alarmClock:9: error: type mismatch;
 found   : Unit
 required: String
  if (vacation ==true){
  ^