welcome.lessons.welcome.bat.bool2.AlarmClock.scala.code
def alarmClock(day:Int, vacation:Boolean): String = {
  day=(day+6)%7
  if (day<6 && vacation==false){
    return "7:00"
  }
  if (day>5 && vacation==false){
    return "10:00"
  }
  if (vacation ==true){
    return "off"
  }
}